--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,8 +1,3 @@
-.phalen-io {
-  width: 100%;
-  overflow-x: hidden;
-}
-
 .container {
   width: 80%;
   max-width: 1000px;
@@ -115,4 +110,9 @@ img {
   @media #{$small} {
     display: none;
   }
+}
+
+.home-wrapper {
+  width: 100%;
+  overflow-x: hidden;
 }
